feat(device): replace (?: Build|[;/\)]) on the [;)/ ]

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6113,16 +6113,16 @@ iLA:
 
 # iNew
 iNew:
-  regex: 'iNew|(?:V7A|V3 Plus|V3-?E|V3C)(?: Build|[;/\)])'
+  regex: 'iNew|(?:V7A|V3 Plus|V3-?E|V3C)[;)/ ]'
   device: 'smartphone'
   models:
-    - regex: 'V3C(?: Build|[;/\)])'
+    - regex: 'V3C[;)/ ]'
       model: 'V3C'
-    - regex: 'V3-?E(?: Build|[;/\)])'
+    - regex: 'V3-?E[;)/ ]'
       model: 'V3-E'
-    - regex: 'V3 Plus(?: Build|[;/\)])'
+    - regex: 'V3 Plus[;)/ ]'
       model: 'V3 Plus'
-    - regex: 'V7A(?: Build|[;/\)])'
+    - regex: 'V7A[;)/ ]'
       model: 'V7A'
     - regex: 'iNew[ -_]([^;/]+) Build'
       model: '$1'
@@ -12988,7 +12988,7 @@ Vivax:
 
 # MLS
 MLS:
-  regex: 'IQ(?:0705|1010w?|1012|1025|1380|1401|1436|1452a|1453|1470|1502a|1511|1552|1553|1568|1570|1806|1808|1810B_M|1832|1850|1890|5017|9610|E100|EL41|G550|GW516|L30|L5[01]|M801|M1001|N700|P50|R300|S300|S1001|W511T|W553|W608|W626)(?: Build|[;/\)])'
+  regex: 'IQ(?:0705|1010w?|1012|1025|1380|1401|1436|1452a|1453|1470|1502a|1511|1552|1553|1568|1570|1806|1808|1810B_M|1832|1850|1890|5017|9610|E100|EL41|G550|GW516|L30|L5[01]|M801|M1001|N700|P50|R300|S300|S1001|W511T|W553|W608|W626)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: 'IQ0705'
@@ -13088,14 +13088,14 @@ MLS:
 
 # Fly
 Fly:
-  regex: 'Fly(?!Flow|touch)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ(?!10[134]0)[0-9]{3,}[i]?)[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?(?: Build|[;/\)])'
+  regex: 'Fly(?!Flow|touch)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ(?!10[134]0)[0-9]{3,}[i]?)[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?[;)/ ]'
   device: 'smartphone'
   models:
-    - regex: '(?:Fly_)?IQ310(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ310[;)/ ]'
       model: 'Panorama'
       device: 'tablet'
 
-    - regex: '(?:Fly_)?IQ236(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ236[;)/ ]'
       model: 'Victory'
     - regex: 'FS506'
       model: 'Cirrus 3'
@@ -13187,93 +13187,93 @@ Fly:
       model: 'Nimbus 16'
     - regex: 'FS458'
       model: 'Stratus 7'
-    - regex: '(?:Fly_)?IQ237(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ237[;)/ ]'
       model: 'Dynamic'
-    - regex: '(?:Fly_)?IQ238(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ238[;)/ ]'
       model: 'Jazz'
-    - regex: '(?:Fly_)?IQ240(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ240[;)/ ]'
       model: 'Whizz'
-    - regex: '(?:Fly_)?IQ255(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ255[;)/ ]'
       model: 'Pride'
-    - regex: '(?:Fly_)?IQ270(?: Firebird)?(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ270(?: Firebird)?[;)/ ]'
       model: 'Firebird'
-    - regex: '(?:Fly_)?IQ275(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ275[;)/ ]'
       model: 'Marathon'
-    - regex: '(?:Fly_)?IQ285(?: Turbo)?(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ285(?: Turbo)?[;)/ ]'
       model: 'Turbo'
-    - regex: '(?:Fly_)?IQ430(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ430[;)/ ]'
       model: 'Evoke'
-    - regex: '(?:Fly_)?IQ431(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ431[;)/ ]'
       model: 'Glory'
-    - regex: '(?:Fly_)?IQ432(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ432[;)/ ]'
       model: 'Era Nano 1'
-    - regex: '(?:Fly_)?IQ436(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ436[;)/ ]'
       model: 'Era Nano 3'
-    - regex: '(?:Fly_)?IQ4490(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4490[;)/ ]'
       model: 'Era Nano 4'
-    - regex: '(?:Fly_)?IQ434(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ434[;)/ ]'
       model: 'Era Nano 5'
-    - regex: '(?:Fly_)?IQ4406(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4406[;)/ ]'
       model: 'Era Nano 6'
-    - regex: '(?:Fly_)?IQ436i(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ436i[;)/ ]'
       model: 'Era Nano 9'
-    - regex: '(?:Fly_)?IQ440(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ440[;)/ ]'
       model: 'Energy'
-    - regex: '(?:Fly_)?IQ4401(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4401[;)/ ]'
       model: 'Era Energy 2'
-    - regex: '(?:Fly_)?IQ441(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ441[;)/ ]'
       model: 'Radiance'
-    - regex: '(?:Fly_)?IQ442(?: Build|[;/\)])'
-      model: 'Miracle'
-    - regex: '(?:Fly_)?IQ442 Quad(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ442 Quad[;)/ ]'
       model: 'Miracle 2'
-    - regex: '(?:Fly_)?IQ443(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ442[;)/ ]'
+      model: 'Miracle'
+    - regex: '(?:Fly_)?IQ443[;)/ ]'
       model: 'Trend'
-    - regex: '(?:Fly_)?IQ444(?: Quattro)?(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ444(?: Quattro)?[;)/ ]'
       model: 'Diamond 2'
-    - regex: '(?:Fly_)?IQ445(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ445[;)/ ]'
       model: 'Genius'
-    - regex: '(?:Fly_)?IQ446(?: Magic)?(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ446(?: Magic)?[;)/ ]'
       model: 'Magic'
-    - regex: '(?:Fly_)?IQ447(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ447[;)/ ]'
       model: 'Era Life 1'
-    - regex: '(?:Fly_)?IQ456(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ456[;)/ ]'
       model: 'Era Life 2'
-    - regex: '(?:Fly_)?IQ4409 Quad(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4409 Quad[;)/ ]'
       model: 'Era Life 4'
-    - regex: '(?:Fly_)?IQ448(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ448[;)/ ]'
       model: 'Chic'
-    - regex: '(?:Fly_)?IQ449(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ449[;)/ ]'
       model: 'Pronto'
-    - regex: '(?:Fly_)?IQ450(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ450[;)/ ]'
       model: 'Horizon'
-    - regex: '(?:Fly_)?IQ450[ _]Quattro(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ450[ _]Quattro[;)/ ]'
       model: 'Horizon 2'
-    - regex: '(?:Fly_)?IQ451(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ451[;)/ ]'
       model: 'Vista'
-    - regex: '(?:Fly_)?IQ452 Quad(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ452 Quad[;)/ ]'
       model: 'Ego Vision 1'
-    - regex: '(?:Fly_)?IQ454(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ454[;)/ ]'
       model: 'Evo Tech 1'
-    - regex: '(?:Fly_)?IQ4403(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4403[;)/ ]'
       model: 'Energy 3'
-    - regex: '(?:Fly_)?IQ4404(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4404[;)/ ]'
       model: 'Spark'
-    - regex: '(?:Fly_)?IQ4410 Quad(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4410 Quad[;)/ ]'
       model: 'Phoenix'
-    - regex: '(?:Fly_)?IQ4411(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4411[;)/ ]'
       model: 'Energy 2'
-    - regex: '(?:Fly_)?IQ4412 Quad(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4412 Quad[;)/ ]'
       model: 'Coral'
-    - regex: '(?:Fly_)?IQ4413[ _]Quad(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4413[ _]Quad[;)/ ]'
       model: 'Evo Chic 3'
-    - regex: '(?:Fly_)?IQ4414 Quad(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4414 Quad[;)/ ]'
       model: 'Evo Tech 3'
-    - regex: '(?:Fly_)?IQ4415 Quad(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4415 Quad[;)/ ]'
       model: 'Era Style 3'
-    - regex: '(?:Fly_)?IQ4504 Quad(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ4504 Quad[;)/ ]'
       model: 'Evo Energy 5'
-    - regex: '(?:Fly_)?IQ([0-9]+[i]? ?(?:Quad|Firebird|Quattro)?)(?: Build|[;/\)])'
+    - regex: '(?:Fly_)?IQ([0-9]+[i]? ?(?:Quad|Firebird|Quattro)?)[;)/ ]'
       model: 'IQ$1'
     - regex: 'Fly[ _\-]?([a-z0-9_]+)/'
       model: '$1'
