--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3297,7 +3297,7 @@ Condor:
 
 # Coolpad
 Coolpad:
-  regex: '(?:YL-)?Coolpad|(?:8190Q|CP8298_I00|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C106-7|MTS-T0|cp3705A)[);/ ]|(8295|5860S) Build'
+  regex: '(?:YL-)?Coolpad|(?:8190Q|8676-A01|CP8298_I00|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C106-7|MTS-T0|cp3705A)[);/ ]|(8295|5860S) Build'
   device: 'smartphone'
   models:
     - regex: 'VCR-[AI]0'
@@ -3321,6 +3321,8 @@ Coolpad:
       model: 'Note 3 Plus'
     - regex: 'CP8298_I00[);/ ]'
       model: 'Note 3 Lite'
+    - regex: '(8676-A01)[);/ ]'
+      model: '$1'
     - regex: '(?:YL-)?Coolpad[ _\-]?([^/;]+) Build'
       model: '$1'
     - regex: '(?:YL-)?Coolpad[ _\-]?([a-z0-9\-]+)'
