--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11135,7 +11135,7 @@ Spice:
 
 # Sharp
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|SH-M0[89]|S3-SH|SH-Z(10|01)|SH-C02|AQUOS|305SH|506SH|SHL22|SHV35|FS80(1[08]|32|28|0[29])[);/ ]|TG-L900S'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|AQUOS|305SH|506SH|SHL22|SHV35|FS80(1[08]|32|28|0[29])[);/ ]|TG-L900S'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11143,6 +11143,8 @@ Sharp:
       model: 'Aquos Xx3'
     - regex: 'S3-SH'
       model: 'One S3'
+    - regex: 'SH-M05[);/ ]|'
+      model: 'Aquos Sense Lite'
     - regex: 'SH-Z10'
       model: 'Aquos zero'
     - regex: 'SH-Z01'
