fix(device) detect brand Sharp model: Aquos Sense Lite (SH-M05)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11143,7 +11143,7 @@ Sharp:
       model: 'Aquos Xx3'
     - regex: 'S3-SH'
       model: 'One S3'
-    - regex: 'SH-M05[);/ ]|'
+    - regex: 'SH-M05[);/ ]'
       model: 'Aquos Sense Lite'
     - regex: 'SH-Z10'
       model: 'Aquos zero'
