--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -5674,3 +5674,23 @@
     model: Aquos Sense Lite
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.1.2; zh-CN; HLTE200M Build/N2G47H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/40.0.2214.89 UCBrowser/11.5.5.943 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 11.5.5.943
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: HI
+    model: HLTE200M
+  os_family: Android
+  browser_family: Unknown
