--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7971,7 +7971,7 @@ Meizu:
 
 # Meitu
 Meitu:
-  regex: '((?<!MI CC 9 )Meitu[2]?|MP1503|MP1512|MP160[23]|MP170[19])[ ;/)]'
+  regex: '((?<!MI CC 9 )Meitu[2]?|MP1503|MP1512|MP160[23]|MP170[19]|MP1718)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: 'MP1503[ ;/)]'
@@ -7982,6 +7982,8 @@ Meitu:
       model: 'T8'
     - regex: 'MP1701[ ;/)]'
       model: 'T8s'
+    - regex: 'MP1718[ ;/)]'
+      model: 'T9'
     - regex: 'MP1603[ ;/)]'
       model: 'M8'
     - regex: 'MP1709[ ;/)]'
