--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7916,7 +7916,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16s|M711C|M35[1356]|M1822|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
+  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16s|M711C|M35[1356]|M1813|M1822|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -7955,6 +7955,8 @@ Meizu:
       model: 'MX5'
     - regex: 'm1 metal'
       model: 'M1 Metal'
+    - regex: 'M1813[);/ ]'
+      model: 'M8'
     - regex: 'PRO 6'
       model: 'PRO 6'
     - regex: 'PRO 7-H[);/ ]'
