--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8245,7 +8245,7 @@ Mofut:
 
 # motorola
 Motorola:
-  regex: 'MOT(?!TO)|(?<!AN)DROID ?(?:Build|[a-z0-9]+)|portalmmm/2.0 (?:E378i|L6|L7|v3)|XOOM [^;/]*Build|XT1925-10|XT1799-2|XT1021|XT180[3-5]|XT1943-1|XT1929-15|(?:XT|MZ|MB|ME)[0-9]{3,4}[a-z]?(?:\(Defy\)|-0[1-5])?(?:[;]? Build|\))'
+  regex: 'MOT(?!TO)|(?<!AN)DROID ?(?:Build|[a-z0-9]+)|portalmmm/2.0 (?:E378i|L6|L7|v3)|XOOM [^;/]*Build|XT1925-10|XT1799-2|XT1021|XT1710-08|XT180[3-5]|XT1943-1|XT1929-15|(?:XT|MZ|MB|ME)[0-9]{3,4}[a-z]?(?:\(Defy\)|-0[1-5])?(?:[;]? Build|\))'
   device: 'smartphone'
   models:
     # Explicit feature phone models
@@ -8350,7 +8350,7 @@ Motorola:
       model: 'Moto Z'
     - regex: '(?:MOT-|Motorola-)?XT1635(?:-0[1-3])?'
       model: 'Moto Z Play'
-    - regex: '(?:MOT-|Motorola-)?XT1710-(?:-02)?'
+    - regex: '(?:MOT-|Motorola-)?XT1710-(?:-0[28])?'
       model: 'Moto Z2 Play'
     - regex: '(?:MOT-|Motorola-)?XT1789-05'
       model: 'Moto Z2 Force'
