feat(device) detect brand Smartisan model: Nut Pro 3 (DT1901A)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10635,7 +10635,7 @@ Smartfren:
 
 # Smartisan
 Smartisan:
-  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DE106|OE106|OC105)[ /;\)]'
+  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DE106|DT1901A|OE106|OC105)[ /;\)]'
   device: 'smartphone'
   models:
     - regex: 'SM70[15]'
@@ -10656,6 +10656,8 @@ Smartisan:
       model: 'Nut Pro 2s'
     - regex: 'OC105[ /;\)]'
       model: 'Nut 3'
+    - regex: 'DT1901A[ /;\)]'
+      model: 'Nut Pro 3'
 
 # STF Mobile
 STF Mobile:
