--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -5874,3 +5874,23 @@
     model: Moto Z2 Play
   os_family: Android
   browser_family: Safari
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 9; zh-CN; DT1901A Build/PKQ1.190727.001) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.108 UCBrowser/12.8.9.1069 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 12.8.9.1069
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: S7
+    model: Nut Pro 3
+  os_family: Android
+  browser_family: Unknown
