feat(device) detect brand Motorola model: One Vision (XT1970-5)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8245,7 +8245,7 @@ Mofut:
 
 # motorola
 Motorola:
-  regex: 'MOT(?!TO)|(?<!AN)DROID ?(?:Build|[a-z0-9]+)|portalmmm/2.0 (?:E378i|L6|L7|v3)|XOOM [^;/]*Build|XT1925-10|XT1799-2|XT1021|XT1710-08|XT180[3-5]|XT1943-1|XT1929-15|(?:XT|MZ|MB|ME)[0-9]{3,4}[a-z]?(?:\(Defy\)|-0[1-5])?(?:[;]? Build|\))'
+  regex: 'MOT(?!TO)|(?<!AN)DROID ?(?:Build|[a-z0-9]+)|portalmmm/2.0 (?:E378i|L6|L7|v3)|XOOM [^;/]*Build|XT1925-10|XT1970-5|XT1799-2|XT1021|XT1710-08|XT180[3-5]|XT1943-1|XT1929-15|(?:XT|MZ|MB|ME)[0-9]{3,4}[a-z]?(?:\(Defy\)|-0[1-5])?(?:[;]? Build|\))'
   device: 'smartphone'
   models:
     # Explicit feature phone models
@@ -8360,6 +8360,8 @@ Motorola:
       model: 'Moto M'
     - regex: '(?:MOT-|Motorola-)?XT1943-1'
       model: 'P30'
+    - regex: '(?:MOT-|Motorola-)?XT1970-5'
+      model: 'One Vision'
 
     - regex: 'Moto ([CGEXZ]) ?\(([a-z0-9]+)\)( Plus| Play)?'
       model: 'Moto $1$2$3'
