--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7037,7 +7037,7 @@ Lenco:
 
 # lenovo
 Lenovo:
-  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42)[/;) ]'
+  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011)[/;) ]'
   device: 'smartphone'
   models:
     - regex: 'Lenovo ?G780'
@@ -7107,7 +7107,7 @@ Lenovo:
       model: 'Yoga Tab 3 10'
       device: 'tablet'
 
-    - regex: 'S6000[ ;)]'
+    - regex: 'S6000[/;) ]'
       model: 'IdeaTab S6000'
       device: 'tablet'
     - regex: 'Lenovo ([ASB][0-9]{4})[A-Z]?\-[EHF]'
@@ -7155,6 +7155,8 @@ Lenovo:
     - regex: 'Lenovo (TB[0-9]?\-[a-z0-9\-]+) Build'
       model: '$1'
       device: 'tablet'
+    - regex: 'L18011[/;) ]'
+      model: 'A5'
     - regex: 'Z2 Plus'
       model: 'Z2 Plus'
     - regex: 'Z2151'
