feat(device) detect brand Vivo models: iQOO Neo 855 (V1936AL), Y50 (V1965A);

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2317,7 +2317,7 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[36][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732[AT]|V1818CT|V19[01]1A|V1932[AT]|V191[36]A|V192[13]A|V1928A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V19[26]2A|V1963A'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[36][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732[AT]|V1818CT|V19[01]1A|V1932[AT]|V191[36]A|V192[13]A|V1928A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V19[26]2A|V196[35]A|V1936AL'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2326,6 +2326,8 @@ Vivo:
       model: 'iQOO Pro' # 2019
     - regex: 'V1916A[);/ ]'
       model: 'iQOO Pro 5G'
+    - regex: 'V1936AL[);/ ]'
+      model: 'iQOO Neo 855'
     - regex: 'vivo 1805[);/ ]'
       model: 'Nex'
     - regex: 'V1923A[);/ ]'
@@ -2400,6 +2402,8 @@ Vivo:
       model: 'Y3 Standard'
     - regex: 'V1934A[);/ ]'
       model: 'Y5s'
+    - regex: 'V1965A[);/ ]'
+      model: 'Y50'
     - regex: 'vivo 1606[);/ ]'
       model: 'Y53i'
     - regex: 'vivo 1603[);/ ]'
