--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2317,7 +2317,7 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[36][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732[AT]|V1818CT|V19[01]1A|V1932[AT]|V191[36]A|V192[13]A|V1928A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V19[26]2A|V196[35]A|V1936AL'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[36][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[36]A|V192[13]A|V1928A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V19[26]2A|V196[35]A|V1936AL'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2396,7 +2396,7 @@ Vivo:
       model: 'X9 Plus'
     - regex: 'vivo 1902[);/ ]'
       model: 'Y17'
-    - regex: 'V1901A[);/ ]'
+    - regex: 'V1901[AT][);/ ]'
       model: 'Y3'
     - regex: 'V1930A[);/ ]'
       model: 'Y3 Standard'
