--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7928,7 +7928,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16s|M7[12]1C|M35[1356]|M1813|M1822|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
+  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16s|M7[12]1C|M35[1356]|M612C|M1813|M1822|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -7956,7 +7956,7 @@ Meizu:
       model: 'M3S'
     - regex: 'M3X'
       model: 'M3X'
-    - regex: 'M5S'
+    - regex: 'M5S|M612C'
       model: 'M5S'
     - regex: '(M04[05]|MX[ -]?2)[);/ ]'
       model: 'MX2'
