feat(device) detect brand Huawei models: Honor 10I (HRY-LX1T)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5315,6 +5315,8 @@ Huawei:
       model: 'Honor 10'
     - regex: 'HRY-(?:[AT]L00[A]?|LX[12]|LX1MEB)[);/ ]'
       model: 'Honor 10 Lite'
+    - regex: 'HRY-LX1T[);/ ]'
+      model: 'Honor 10I'
     - regex: 'U9508[);/ ]'
       model: 'Honor 2'
     - regex: 'YAL-(?:L21|[AT]L00)[);/ ]'
