feat(device) detect new brand Contixo model: CX-1045 3G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14720,3 +14720,10 @@ RED:
   device: 'smartphone'
   model: 'Hydrogen One'
 
+# Contixo
+Contixo:
+  regex: 'Contixo|(?:CX-1045 3G)[);/ ]'
+  device: 'tablet'
+  models:
+    - regex: 'CX-1045 3G[);/ ]'
+      model: 'CX-1045 3G'
