--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6254,3 +6254,23 @@
     model: Y8p
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: mozilla/5.0 (linux; android 6.0; contixo cx-1045 3g) applewebkit/537.36 (khtml, like gecko) chrome/83.0.4103.106 safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 3C
+    model: CX-1045 3G
+  os_family: Android
+  browser_family: Chrome
