feat(device) detect brand Huawei model: Honor 9S (DUA-LX9)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5419,6 +5419,8 @@ Huawei:
       model: 'Honor 9 Lite'
     - regex: 'LLD-AL[23]0[);/ ]'
       model: 'Honor 9i'
+    - regex: 'DUA-LX9[);/ ]'
+      model: 'Honor 9S'
     - regex: 'HLK-AL00[);/ ]'
       model: 'Honor 9X'
     - regex: 'HLK-AL10[);/ ]'
