--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6274,3 +6274,23 @@
     model: CX-1045 3G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: mozilla/5.0 (linux; android 10; dua-lx9 build/XXXXX; wv) applewebkit/537.36 (khtml, like gecko) version/4.0 chrome/78.0.3904.108 mobile safari/537.36 yandexsearch/9.85 yandexsearchwebview/9.85
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 78.0.3904.108
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: HU
+    model: Honor 9S
+  os_family: Android
+  browser_family: Chrome
