feat(device) detect brand Ergo model: B506 Intro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4448,11 +4448,13 @@ Sony:
 
 # Ergo
 Ergo:
-  regex: 'ERGO|(V550[_ ]Vision|B502 Basic|B504[_ ]Unit|A502[_ ]Aurum|A503[ _]Optima|Prime B400|A551 Sky 4G|A553 Power|A555 Universe|Force F500|GoTab GBT9|GoTab Gti8|V551[ _]Aura|V540_Level|V570_BIG_BEN)'
+  regex: 'ERGO|(V550[_ ]Vision|B502 Basic|B504[_ ]Unit|A502[_ ]Aurum|A503[ _]Optima|Prime B400|A551 Sky 4G|A553 Power|A555 Universe|Force F500|GoTab GBT9|GoTab Gti8|V551[ _]Aura|V540_Level|V570_BIG_BEN|B506[_ ]INTRO)'
   device: 'smartphone'
   models:
     - regex: 'B502 Basic'
       model: 'B502 Basic'
+    - regex: 'B506[_ ]INTRO'
+      model: 'B506 Intro'
     - regex: 'V550[_ ]Vision'
       model: 'V550 Vision'
     - regex: 'B504[_ ]Unit'
