--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6314,3 +6314,23 @@
     model: Honor 9C
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: mozilla/5.0 (linux; android 8.1.0; b506_intro) applewebkit/537.36 (khtml, like gecko) chrome/70.0.3538.110 mobile safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 70.0.3538.110
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: E7
+    model: B506 Intro
+  os_family: Android
+  browser_family: Chrome
