--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6334,3 +6334,23 @@
     model: B506 Intro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (linux; android 8.1.0; BL250) AppleWebKit/537.36 (khtml, like gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: DX
+    model: BL250
+  os_family: Android
+  browser_family: Chrome
