--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3566,7 +3566,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|(VA[12]10|ML450|MS[56]50|BL150|BS155|BS160|BS550|BS650|AL[12]40)[);/ ]'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|(VA[12]10|ML450|MS[56]50|BL[12]50|BS155|BS160|BS550|BS650|AL[12]40)[);/ ]'
   device: 'smartphone'
   models:
 
@@ -3585,7 +3585,7 @@ DEXP:
     - regex: 'H135[ _]Build'
       model: 'Atlas'
       device: 'desktop'
-    - regex: '(BL150|BS155|BS160|BS550|BS650|AL[12]40)[);/ ]'
+    - regex: '(BL[12]50|BS155|BS160|BS550|BS650|AL[12]40)[);/ ]'
       model: '$1'
     - regex: 'DEXP[ _]([^;/]+) Build'
       model: '$1'
