--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6354,3 +6354,23 @@
     model: BL250
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: mozilla/5.0 (linux; android 4.3; mediapad t1 8.0) applewebkit/537.36 (khtml, like gecko) chrome/70.0.3538.110 safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "4.3"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 70.0.3538.110
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: HU
+    model: MediaPad T1 8
+  os_family: Android
+  browser_family: Chrome
