--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6374,3 +6374,23 @@
     model: MediaPad T1 8
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: mozilla/5.0 (linux; android 6.0; cubot echo) applewebkit/537.36 (khtml, like gecko) chrome/70.0.3538.80 mobile safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 70.0.3538.80
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: CB
+    model: Echo
+  os_family: Android
+  browser_family: Chrome
