--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6335,7 +6335,7 @@
   os_family: Android
   browser_family: Chrome
 -
-  user_agent: Mozilla/5.0 (linux; android 8.1.0; BL250) AppleWebKit/537.36 (khtml, like gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; BL250) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
   os:
     name: Android
     short_name: AND
@@ -6392,5 +6392,25 @@
     type: smartphone
     brand: CB
     model: Echo
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; RMX2001)  AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RE
+    model: "6"
   os_family: Android
   browser_family: Chrome
