--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8984,7 +8984,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|2030|2051|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|2001|2030|2051|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9015,6 +9015,8 @@ Realme:
       model: '5 Pro'
     - regex: 'RMX2030'
       model: '5i'
+    - regex: 'RMX2001'
+      model: '6'
     - regex: 'RMX1925'
       model: '5S'
     - regex: 'RMX1811'
