feat(device) detect brand Yu model: Yuphoria (YU5010)
issue #5585

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12857,12 +12857,12 @@ Yezz:
 
 # Yu
 Yu:
-  regex: 'YU5010A|AO5510'
+  regex: '(YU5010[A]?|AO5510)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'YU5010A'
+    - regex: 'YU5010[A]?[);/ ]'
       model: 'Yuphoria'
-    - regex: 'AO5510'
+    - regex: 'AO5510[);/ ]'
       model: 'Yureka'
 
 # Yuandao
