--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6414,3 +6414,24 @@
     model: "6"
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; YU5010 Build/MOB30J)
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Y1
+    model: Yuphoria
+  os_family: Android
+  browser_family: Android Browser
+
