--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1713,7 +1713,7 @@ ANS:
 
 # Assistant
 Assistant:
-  regex: '(AS[-_](?:502|543[1-6]|44[12]1|541[12]|54[23]1|6431|401L)|AP-(?:109|115G|721N|753G|7[25]7G|10[68]|107G|110N|941))[;/)_ ]'
+  regex: '(AS[-_](?:502|543[1-6]|44[12]1|541[12]|54[23]1|6431|401L)|AP-(?:109|115G|721N|753G|7[25]7G|10[68]|107G|110N|941|719))[;/)_ ]'
   device: 'smartphone'
   models:
     - regex: 'AS[-_]401L '
@@ -1754,7 +1754,7 @@ Assistant:
     - regex: 'AP-106'
       model: 'AP-106 Force'
       device: 'tablet'
-    - regex: '(AP-(?:109|115G|7[25]7G|753G|107G|110N))[/;) ]'
+    - regex: '(AP-(?:109|115G|7[25]7G|753G|107G|110N|719))[/;) ]'
       device: 'tablet'
       model: '$1'
 
