feat(device) detect new brand E-Ceros model: Revolution (CT9716)
issue #5585

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14737,3 +14737,11 @@ Contixo:
   models:
     - regex: 'CX-1045 3G[);/ ]'
       model: 'CX-1045 3G'
+
+# E-Ceros
+'E-Ceros':
+   regex: '(?:CT9716)[);/ ]'
+   device: 'tablet'
+   models:
+     - regex: 'CT9716[);/ ]'
+       model: 'Revolution'
