--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6454,5 +6454,23 @@
     model: AP-719
   os_family: Android
   browser_family: Android Browser
-
-
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.4; CT9716 Build/KTU84Q)
+  os:
+    name: Android
+    short_name: AND
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 2E
+    model: Revolution
+  os_family: Android
+  browser_family: Android Browser
