feat(device) detect brand E-Ceros model: Revolution HD (CT9716-B)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14740,8 +14740,10 @@ Contixo:
 
 # E-Ceros
 'E-Ceros':
-   regex: '(?:CT9716)[);/ ]'
+   regex: '(?:CT9716(?:-B)?)[);/ ]'
    device: 'tablet'
    models:
      - regex: 'CT9716[);/ ]'
        model: 'Revolution'
+     - regex: 'CT9716-B[);/ ]'
+       model: 'Revolution HD'
