feat(device) detect brand Beeline model: Fast
issue #5585

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2514,6 +2514,8 @@ Beeline:
       model: 'Smart $1'
     - regex: 'Smart Dual'
       model: 'Smart Dual'
+    - regex: 'Fast[);/ ]'
+      model: 'Fast'
 
 # Beetel
 Beetel:
