--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6494,4 +6494,23 @@
     model: Revolution HD
   os_family: Android
   browser_family: Android Browser
-
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1; Beeline Fast Build/LMY47D)
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: B5
+    model: Fast
+  os_family: Android
+  browser_family: Android Browser
