--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7944,7 +7944,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16s|M7[12]1C|M35[1356]|M612C|M1813|M1822|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
+  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16s|M7[12]1C|M35[1356]|M612C|M578CA|M1813|M1822|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -7957,7 +7957,7 @@ Meizu:
       model: 'M1E'
     - regex: 'M2 E[);/ ]'
       model: 'M2E'
-    - regex: '(?:MZ-)?M578C|M2[);/ ]'
+    - regex: '(?:MZ-)?M578C[A]?|M2[);/ ]'
       model: 'M2'
     - regex: 'M711C[);/ ]'
       model: 'M6'
