feat(device) detect brand Yu model: Yureka Plus (YU5510)
issue #5585

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12863,13 +12863,15 @@ Yezz:
 
 # Yu
 Yu:
-  regex: '(YU5010[A]?|AO5510)[);/ ]'
+  regex: '(YU5[05]10[A]?|AO5510)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'YU5010[A]?[);/ ]'
       model: 'Yuphoria'
     - regex: 'AO5510[);/ ]'
       model: 'Yureka'
+    - regex: 'YU5510[);/ ]'
+      model: 'Yureka Plus'
 
 # Yuandao
 Yuandao:
