feat(device) detect brand Polytron model: Rocket T1 (R2501)
issue #5585

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10940,6 +10940,8 @@ Polytron:
       model: 'Rocket R3'
     - regex: 'POLYTRON[ _-]R2457'
       model: 'Rocket S2'
+    - regex: 'POLYTRON[ _-]R2501'
+      model: 'Rocket T1'
     - regex: 'POLYTRON[ _-]R2509SE'
       model: 'Rocket T6 SE'
     - regex: 'POLYTRON[ _-]R2509'
