--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -6654,3 +6654,23 @@
     model: M3 Note
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.0; POLYTRON R2501 Build/LRX21M)
+  os:
+    name: Android
+    short_name: AND
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: P5
+    model: Rocket T1
+  os_family: Android
+  browser_family: Android Browser
