feat(device) detect brand True model: Smart 4G Speedy 5
issue #5585

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14048,13 +14048,15 @@ NEXBOX:
 
 # True
 'True':
-  regex: 'SMART[ _](MAX 4.0 PLUS|4G Speedy 5.0 Plus)'
+  regex: 'SMART[ _](MAX 4.0 PLUS|4G Speedy 5.0 Plus|4G[_ ]Speedy[_ ]5inch)'
   device: 'smartphone'
   models:
     - regex: 'SMART MAX 4.0 PLUS'
       model: 'Smart Max 4.0 Plus'
     - regex: 'SMART 4G Speedy 5.0 Plus'
       model: 'Smart 4G Speedy 5.0 Plus'
+    - regex: 'SMART[ _]4G[_ ]Speedy[_ ]5inch'
+      model: 'Smart 4G Speedy 5'
 
 Yandex:
   regex: '(YNDX-?000SB)[;)\ ]'
