feat(device) detect brand Teclast model: P10S (P10S(N4H5))

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11450,7 +11450,7 @@ TCL:
 
 # Teclast
 Teclast:
-  regex: 'Teclast|X98 Air III|Tbook|T30_(ROW|EEA)|T10\(E3C6\)'
+  regex: 'Teclast|X98 Air III|Tbook|T30_(ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)'
   device: 'tablet'
   models:
     - regex: 'Tbook[_ -]([^;/]+) Build'
@@ -11459,6 +11459,8 @@ Teclast:
       model: 'T10'
     - regex: 'T30_(ROW|EEA)'
       model: 'T30 $1'
+    - regex: 'P10S\(N4H5\)'
+      model: 'P10S'
     - regex: 'X98 Air III[);/ ]'
       model: 'X98 Air III'
     - regex: 'Teclast[_ -]([^;/]+) Build'
