feat(device) detect new brand Multilaser models: E, F, MS50G
issue #6322

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14793,3 +14793,13 @@ How:
   regex: '(HT-705XS)[);/ ]'
   device: 'tablet'
   model: '$1'
+
+# Multilaser
+Multilaser:
+  regex: '(Multilaser[ _](?:[FE])|MS50G)[);/ ]'
+  device: 'smartphone'
+  models:
+    - regex: 'Multilaser[ _]([FE])[);/ ]' #P9118
+      model: '$1'
+    - regex: '(MS50G)[);/ ]'
+      model: '$1'
