feat(device) detect brand POCO model: F2 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12622,9 +12622,13 @@ X-View:
 
 # POCO
 POCO:
-  regex: 'POCO X2[);/ ]'
+  regex: 'POCO[ _](X2|F2 PRO)[);/ ]'
   device: 'smartphone'
-  model: 'X2'
+  models:
+    - regex: 'POCO X2[);/ ]'
+      model: 'X2'
+    - regex: 'POCO F2 PRO[);/ ]'
+      model: 'F2 Pro'
 
 # Xiaomi
 Xiaomi:
