feat(device) detect new brand Positivo BGH model: Twist S
issue #6322

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14818,8 +14818,10 @@ Multilaser:
 
 # Positivo BGH
 Positivo BGH:
-  regex: '(Twist \(2018\))[);/ ]'
+  regex: '(Positivo Twist S|Twist \(2018\))[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Twist \(2018\)[);/ ]'
       model: 'Twist (2018)'
+    - regex: 'Positivo Twist S[);/ ]'
+      model: 'Twist S'
