--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -7174,4 +7174,24 @@
     model: Twist (2018)
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U;Android 6.0; Positivo Twist S Build/MRA58K)
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: 3P
+    model: Twist S
+  os_family: Android
+  browser_family: Android Browser
 
