--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14825,3 +14825,8 @@ Positivo BGH:
       model: 'Twist (2018)'
     - regex: 'Positivo Twist S[);/ ]'
       model: 'Twist S'
+
+Maxtron:
+  regex: 'Maxtron[ _-](V[327]|S8)[);/ ]'
+  device: 'smartphone'
+  model: '$1'
