feat(device) detect brand Positivo BGH models: Twist Metal 32GB, Twist Max
issue #6322

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14818,11 +14818,15 @@ Multilaser:
 
 # Positivo BGH
 Positivo BGH:
-  regex: '(Positivo Twist S|Twist \(2018\))[);/ ]'
+  regex: '(Positivo Twist S|Twist (?:\(2018\)|Metal 32GB|Max))[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Twist \(2018\)[);/ ]'
       model: 'Twist (2018)'
+    - regex: 'Twist Metal 32GB[);/ ]'
+      model: 'Twist Metal 32GB'
+    - regex: 'Twist Max[);/ ]'
+      model: 'Twist Max'
     - regex: 'Positivo Twist S[);/ ]'
       model: 'Twist S'
 
