feat(device) detect brand Multilaser models: MS40S, MS40G, MS55M, MS50L, MS70, MS50X
issue #6322

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14822,12 +14822,12 @@ How:
 
 # Multilaser
 Multilaser:
-  regex: '(Multilaser[ _](?:[FE])|MS50G|M7[_-]3G[_-]PLUS|MS45S_A6)[);/ ]'
+  regex: '(Multilaser[ _](?:[FE])|MS50[LGX]|M7[_-]3G[_-]PLUS|MS45S_A6|MS40[GS]|MS55M|MS70)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Multilaser[ _]([FE])[);/ ]' #P9118
       model: '$1'
-    - regex: '(MS50G|MS45S_A6)[);/ ]'
+    - regex: '(MS50[LGX]|MS45S_A6|MS40[GS]|MS55M|MS70)[);/ ]'
       model: '$1'
     - regex: '(M7[_-]3G[_-]PLUS)[);/ ]'
       device: 'tablet'
