feat(device) detect brand Samsung model: GALAXY J7 Sky Pro (SM-S727VL)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10358,6 +10358,8 @@ Samsung:
       model: 'GALAXY J7 Prime 2'
     - regex: '(?:SAMSUNG-)?SM-G615[F]'
       model: 'GALAXY J7 Max'
+    - regex: '(?:SAMSUNG-)?SM-S727VL'
+      model: 'GALAXY J7 Sky Pro'
     - regex: '(?:SAMSUNG-)?SM-J730(?:F|G|GM)'
       model: 'GALAXY J7 Pro'
     - regex: '(?:SAMSUNG-)?SM-J701(?:F|M)'
