feat(device) detect brand NUU model: A6L-G feat(device) detect brand MTC model: Smart Surf 4G feat(device) detect brand ZTE model: Allstar (Z818L)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8743,7 +8743,7 @@ Nomi:
 
 # NUU Mobile
 NUU Mobile:
-  regex: 'NUU_|((?:N(5702|5001)L|S6001L)|A6L-C)[;)/ ]'
+  regex: 'NUU_|((?:N(5702|5001)L|S6001L)|A6L-[CG])[;)/ ]'
   device: 'smartphone'
   models:
     - regex: 'NUU_A([13])'
@@ -8752,7 +8752,7 @@ NUU Mobile:
       model: 'G2'
     - regex: 'N5702L'
       model: 'G3'
-    - regex: '(N5001L|A6L-C)[;)/ ]'
+    - regex: '(N5001L|A6L-[CG])[;)/ ]'
       model: '$1'
 
 # NYX Mobile
@@ -13526,12 +13526,14 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N9180|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N9180|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
     - regex: 'N799D[);/ ]'
       model: 'Blade Eg'
+    - regex: 'Z818L[);/ ]'
+      model: 'Allstar'
     - regex: 'Z3001S[);/ ]'
       model: 'Quest Plus'
     - regex: 'Ctyon-A9[);/ ]'
@@ -13933,7 +13935,7 @@ Lemhoov:
       model: '$1'
 # MTC
 MTC:
-  regex: 'MTC[ _](97[82]|970|982[OT]|982|1078)|(MTC_)?SMART[ _]?(Race|Sprint|Run|Surf2)[ _]4G|MTC975'
+  regex: 'MTC[ _](97[82]|970|982[OT]|982|1078)|(MTC_)?SMART[ _]?(Race|Sprint|Run|Surf[2]?)[ _]4G|MTC975'
   device: 'smartphone'
   models:
     - regex: 'MTC[ _](97[82]|970[H]?|982[OT]|982)'
@@ -13951,6 +13953,8 @@ MTC:
       model: 'Smart Run 4G'
     - regex: 'SMART[ _]Surf2[ _]4G'
       model: 'Smart Surf 2 4G'
+    - regex: 'SMART[ _]Surf[ _]4G'
+      model: 'Smart Surf 4G'
 
 # MegaFon
 MegaFon:
