feat(device) detect brand Samsung model: GALAXY J3 Prime (SM-J327T1)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10318,6 +10318,8 @@ Samsung:
       model: 'GALAXY J2 Pro'
     - regex: '(?:SAMSUNG-)?SM-S367VL'
       model: 'GALAXY J3 Orbit'
+    - regex: '(?:SAMSUNG-)?SM-J327T1'
+      model: 'GALAXY J3 Prime'
     - regex: '(?:SAMSUNG-)?SM-J320(?:FN|[AFGHMNPV])'
       model: 'GALAXY J3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-J330(?:F|G)'
