feat(device) detect brand Multilaser model: M7 3G Quad Core
issue #6322

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14832,7 +14832,7 @@ How:
 
 # Multilaser
 Multilaser:
-  regex: '(Multilaser[ _](?:[FE])|MS50[LGX]|M7[_-]3G[_-]PLUS|MS45S_A6|M7SQC_Plus|MS40[GS]|MS55M|MS70)[);/ ]'
+  regex: '(Multilaser[ _](?:[FE])|MS50[LGX]|M7[_-]3G[_-]PLUS|MS45S_A6|M7SQC_Plus|MS40[GS]|MS55M|MS70|M7-3G QUAD CORE)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Multilaser[ _]([FE])[);/ ]' #P9118
@@ -14845,6 +14845,9 @@ Multilaser:
     - regex: 'M7SQC_PLUS[);/ ]'
       device: 'tablet'
       model: 'M7SQC Plus'
+    - regex: 'M7-3G QUAD CORE[);/ ]'
+      device: 'tablet'
+      model: 'M7 3G Quad Core'
 
 # Positivo BGH
 Positivo BGH:
