--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -8113,7 +8113,7 @@
     brand: NL
     model: A6L-G
   os_family: Android
-  browser_family: Chrom
+  browser_family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 5.1; SMART_Surf_4G Build/LMY47D) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3239.111 Mobile Safari/537.36
   os:
@@ -8174,3 +8174,23 @@
     model: GALAXY J3 Prime
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; M7-3G QUAD CORE Build/KOT49H)
+  os:
+    name: Android
+    short_name: AND
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 1R
+    model: M7 3G Quad Core
+  os_family: Android
+  browser_family: Android Browser
