feat(device) detect brand Newman model: K1

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14896,6 +14896,6 @@ SEMP TCL:
 
 # Newman
 Newman:
-  regex: 'Newman[ _](P308)[);/ ]'
+  regex: 'Newman[ _](P308|K1)[);/ ]'
   device: 'smartphone'
   model: '$1'
