feat(device) detect brand Realme model: X50 Pro (RMX2071)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9007,7 +9007,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|20[234]0|2051|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|20[234]0|20[57]1|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9054,8 +9054,10 @@ Realme:
       model: 'C3'
     - regex: 'RMX1831'
       model: 'U1'
-    - regex: 'RMX2051'
+    - regex: 'RMX2051[);/ ]'
       model: 'X50 5G'
+    - regex: 'RMX2071[);/ ]'
+      model: 'X50 Pro'
 
 # oppo
 OPPO:
