feat(device) detect brand Huawei model: MatePad 10.4 (BAH3-AL00)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5735,6 +5735,9 @@ Huawei:
     - regex: 'HDN-[LW]09[);/ ]'
       model: 'Honor Water Play 10.1'
       device: 'tablet'
+    - regex: 'BAH3-AL00[);/ ]'
+      model: 'MatePad 10.4'
+      device: 'tablet'
     - regex: 'HDL-(W09|AL09)[);/ ]'
       model: 'Honor Water Play 8.0'
       device: 'tablet'
