--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -8334,5 +8334,26 @@
     model: King Kong 4
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; BAH3-AL00) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.117 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 80.0.3987.117
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: HU
+    model: MatePad 10.4
+  os_family: Android
+  browser_family: Chrome
+
 
 
