feat(device) detect brand Meitu model: M8s (MP1711)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8036,7 +8036,7 @@ Meizu:
 
 # Meitu
 Meitu:
-  regex: '((?<!MI CC 9 )Meitu[2]?|MP1503|MP1512|MP160[23]|MP170[19]|MP171[38])[ ;/)]'
+  regex: '((?<!MI CC 9 )Meitu[2]?|MP1503|MP1512|MP160[23]|MP170[19]|MP171[138])[ ;/)]'
   device: 'smartphone'
   models:
     - regex: 'MP1503[ ;/)]'
@@ -8051,7 +8051,7 @@ Meitu:
       model: 'T9'
     - regex: 'MP1603[ ;/)]'
       model: 'M8'
-    - regex: 'MP1709[ ;/)]'
+    - regex: 'MP17(?:09|11)[ ;/)]'
       model: 'M8s'
     - regex: 'Meitu2[ ;/)]'
       model: '2'
