feat(device) detect brand Sharp model: R3 (SHV44)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11240,7 +11240,7 @@ Spice:
 
 # Sharp
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|AQUOS|305SH|506SH|SHL22|SHV35|FS80(1[08]|32|28|0[29])[);/ ]|TG-L900S'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|AQUOS|305SH|506SH|SHL22|SHV44|SHV35|FS80(1[08]|32|28|0[29])[);/ ]|TG-L900S'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11268,6 +11268,8 @@ Sharp:
       model: 'Aquos Crystal'
     - regex: 'FS8010|SH-M08'
       model: 'Aquos S2'
+    - regex: 'SHV44[);/ ]'
+      model: 'Aquos R3'
     - regex: 'FS8032'
       model: 'Aquos S3'
     - regex: 'FS8018'
