feat(device) detect brand Vivo model: Z5x (2020) (V1990A)

--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -8514,4 +8514,24 @@
     model: iQOO Z1
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 9; zh-CN; V1990A Build/PKQ1.181030.001) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.108 UCBrowser/13.0.2.1082 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 13.0.2.1082
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: VV
+    model: Z5x (2020)
+  os_family: Android
+  browser_family: Unknown
 
