feat(device) detect brand Smartisan model: Pro 2 (OS105)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10727,7 +10727,7 @@ Smartfren:
 
 # Smartisan
 Smartisan:
-  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DE106|DT1901A|OE106|OC105)[ /;\)]'
+  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DE106|DT1901A|OE106|O[CS]105)[ /;\)]'
   device: 'smartphone'
   models:
     - regex: 'SM70[15]'
@@ -10742,6 +10742,8 @@ Smartisan:
       model: 'U1'
     - regex: 'OD10[35]'
       model: 'Pro'
+    - regex: 'OS105[ /;\)]'
+      model: 'Pro 2'
     - regex: 'DE106[ /;\)]'
       model: 'R1'
     - regex: 'OE106[ /;\)]'
