feat(device) detect brand Xiaolajiao model: 20190416Q

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14086,12 +14086,14 @@ X-TIGI:
 
 # Xiaolajiao
 Xiaolajiao:
-  regex: '(LA2-(?:L|S[N]?)|HLA Note3)[);/ ]'
+  regex: '(LA2-(?:L|S[N]?)|HLA Note3|20190416Q)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'HLA Note3[);/ ]'
       model: 'Red Pepper Note 3'
     - regex: '(LA2-(?:L|S[N]?))[);/ ]'
+      model: '$1'
+    - regex: '(20190416Q)[);/ ]'
       model: '$1'
 
 # Ritmix
