feat(device) detect brand Vivo model: Y9s (V1945A)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2325,7 +2325,7 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346]A|V192[1348]A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V19[26]2A|V196[35]A|V1986A|V1936A[L]?|V19[59]0A|V200[15]A'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346]A|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1938T|V1730EA|V19[26]2A|V196[35]A|V1986A|V1936A[L]?|V19[59]0A|V200[15]A'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2454,6 +2454,8 @@ Vivo:
       model: 'Y89'
     - regex: 'vivo 181[17][);/ ]'
       model: 'Y91'
+    - regex: 'V1945A[);/ ]'
+      model: 'Y9s'
     - regex: 'vivo 18(16|20)[);/ ]'
       model: 'Y91i'
     - regex: '(V1818[AT]|vivo 181[45])[);/ ]'
