feat(device) detect brand Xiaolajiao model: E Sports (20180322D)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14088,7 +14088,7 @@ X-TIGI:
 
 # Xiaolajiao
 Xiaolajiao:
-  regex: '(LA2-(?:L|S[N]?)|HLA Note3|20190416Q|20170608S)[);/ ]'
+  regex: '(LA2-(?:L|S[N]?)|HLA Note3|20190416Q|20170608S|20180322D)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'HLA Note3[);/ ]'
@@ -14099,6 +14099,8 @@ Xiaolajiao:
       model: '$1'
     - regex: '20170608S[);/ ]'
       model: 'Red Pepper Plus'
+    - regex: '20180322D[);/ ]'
+      model: 'E Sports'
 
 # Ritmix
 Ritmix:
