--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -8634,5 +8634,23 @@
     model: Y9s
   os_family: Android
   browser_family: Chrome
-
-
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; 20180322D Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/65.0.3325.109 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 65.0.3325.109
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: XL
+    model: E Sports
+  os_family: Android
+  browser_family: Chrome
