feat(device) detect brand Xiaomi model: MiTV 4A

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12678,7 +12678,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)[);/ ]|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-A0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[34]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP1|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|M2002J9E|HM2014819|WT88047|M2004J7[AB]C|M2003J15SC'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)[);/ ]|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-A0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[34]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP1|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2002J9E|HM2014819|WT88047|M2004J7[AB]C|M2003J15SC'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -12783,7 +12783,7 @@ Xiaomi:
     - regex: ' MiTV-MSSP1[);/ ]'
       model: 'MiTV 4S'
       device: 'tv'
-    - regex: ' MiTV-AXSO0[);/ ]'
+    - regex: '( MiTV-AXSO0|MiTV4A)[);/ ]'
       model: 'MiTV 4A'
       device: 'tv'
     - regex: '(MiTV)(4[CSX]|4)[);/ ]'
