--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -8654,3 +8654,23 @@
     model: E Sports
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 6.0.1; zh-cn; MiTV4A Build/MHC19J) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.132 MQQBrowser/8.4 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: QQ Browser
+    short_name: QQ
+    version: "8.4"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: XI
+    model: MiTV 4A
+  os_family: Android
+  browser_family: Unknown
