feat(device) detect brand Positivo BGH model: Selfie (S455)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14887,9 +14887,11 @@ Multilaser:
 
 # Positivo BGH
 Positivo BGH:
-  regex: '(Positivo Twist|Twist (?:\(2018\)|2 (?:Fit|Pro)|Mini|Metal(?: 32GB)?|Max|XL|[2SM]))[);/ ]'
+  regex: '(T1060B|S455|Positivo Twist|Twist (?:\(2018\)|2 (?:Fit|Pro)|Mini|Metal(?: 32GB)?|Max|XL|[2SM]))[);/ ]'
   device: 'smartphone'
   models:
+    - regex: 'S455[);/ ]'
+      model: 'Selfie'
     - regex: 'Twist \(2018\)[);/ ]'
       model: 'Twist (2018)'
     - regex: 'Twist Metal 32GB[);/ ]'
@@ -14908,6 +14910,10 @@ Positivo BGH:
       model: 'Twist XL'
     - regex: '(?:Positivo )?Twist ([2SM])[);/ ]'
       model: 'Twist $1'
+
+    - regex: 'T1060B[);/ ]'
+      device: 'tablet'
+      model: 'T1060B'
 
 # Maxtron
 Maxtron:
