--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -8694,3 +8694,23 @@
     model: iQOO Neo 3
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.0.2; S455 Build/LRX22G)
+  os:
+    name: Android
+    short_name: AND
+    version: 5.0.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: 3P
+    model: Selfie
+  os_family: Android
+  browser_family: Android Browser
