feat(device) detect brand Smartisan model: Nut 3 (OC106)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10731,7 +10731,7 @@ Smartfren:
 
 # Smartisan
 Smartisan:
-  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DE106|DT1901A|OE106|O[CS]105)[ /;\)]'
+  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DE106|DT1901A|O[CE]106|O[CS]105)[ /;\)]'
   device: 'smartphone'
   models:
     - regex: 'SM70[15]'
@@ -10752,7 +10752,7 @@ Smartisan:
       model: 'R1'
     - regex: 'OE106[ /;\)]'
       model: 'Nut Pro 2s'
-    - regex: 'OC105[ /;\)]'
+    - regex: 'OC10[56][ /;\)]'
       model: 'Nut 3'
     - regex: 'DT1901A[ /;\)]'
       model: 'Nut Pro 3'
