feat(device) detect brand Smartisan model: JianGuo Pro 2 (OS103)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10734,7 +10734,7 @@ Smartfren:
 
 # Smartisan
 Smartisan:
-  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DE106|DT1901A|O[CE]106|O[CS]105)[ /;\)]'
+  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DE106|DT1901A|O[CE]106|OS103|O[CS]105)[ /;\)]'
   device: 'smartphone'
   models:
     - regex: 'SM70[15]'
@@ -10759,6 +10759,8 @@ Smartisan:
       model: 'Nut 3'
     - regex: 'DT1901A[ /;\)]'
       model: 'Nut Pro 3'
+    - regex: 'OS103[ /;\)]'
+      model: 'JianGuo Pro 2'
 
 # STF Mobile
 STF Mobile:
