fix(pr) remove space regex in detect device MiTV 4A

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12787,10 +12787,10 @@ Xiaomi:
     - regex: 'MiBOX1S[);/ ]'
       model: 'Mi Box 1S'
       device: 'tv'
-    - regex: ' MiTV-MSSP1[);/ ]'
+    - regex: 'MiTV-MSSP1[);/ ]'
       model: 'MiTV 4S'
       device: 'tv'
-    - regex: '( MiTV-AXSO0|MiTV4A)[);/ ]'
+    - regex: '(?:MiTV-AXSO0|MiTV4A)[);/ ]'
       model: 'MiTV 4A'
       device: 'tv'
     - regex: '(MiTV)(4[CSX]|4)[);/ ]'
