--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7136,7 +7136,7 @@ Lenovo:
     - regex: 'Lenovo TB-X304[FL]'
       model: 'TAB4 10'
       device: 'tablet'
-    - regex: '(TB-X704V|701LV)[/;) ]'
+    - regex: '(?:TB-X704V|701LV)[/;) ]'
       model: 'TAB4 10 Plus'
       device: 'tablet'
     - regex: 'TB-X704A'
