--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5832,7 +5832,7 @@ Huawei:
     - regex: 'T1-701u[);/ ]'
       device: 'tablet'
       model: 'MediaPad T1 7'
-    - regex: '(T1-823L|MediaPad T1 8.0)[);/ ]'
+    - regex: '(?:T1-823L|MediaPad T1 8.0)[);/ ]'
       device: 'tablet'
       model: 'MediaPad T1 8'
     - regex: 'AGS2-AL00[);/ ]'
