fix(pr) Added optional group regex in common detect brand Meitu
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8052,7 +8052,7 @@ Meizu:
 
 # Meitu
 Meitu:
-  regex: '((?<!MI CC 9 )Meitu[2]?|MP1503|MP1512|MP160[23]|MP170[19]|MP171[138])[ ;/)]'
+  regex: '(?:(?<!MI CC 9 )Meitu[2]?|MP1503|MP1512|MP160[23]|MP170[19]|MP171[138])[ ;/)]'
   device: 'smartphone'
   models:
     - regex: 'MP1503[ ;/)]'
